tests/compile/fail/test_attribute/non_async.stderr
error: Must be async
 --> $DIR/non_async.rs:2:1
  |
2 | fn run() {}
  | ^^^^^^^^
